--- a/web-app/src/styles/App.scss
+++ b/web-app/src/styles/App.scss
@@ -31,8 +31,6 @@ body {
   display: flex;
   position: relative;
 
-
-  
   .BrandPara {
     color: "#666666";
     font-size: "18px";
@@ -234,8 +232,6 @@ body {
       }
     }
 
-  
-    
     .ChildMain {
       margin: 0px 0.5px 0px 0.5px;
       background-size: cover;
@@ -496,4 +492,82 @@ body {
   padding-left: 20px;
 }
 
+.td-figure {
+  // perspective: 1500px;
 
+  img {
+    // height: auto;
+    // width: 80%;
+    transform: rotateX(10deg) rotateY(-18deg) rotate(3deg);
+    border-radius: 0.25em;
+    box-shadow: 2px 10px 30px hsla(0, 0%, 0%, 0.25);
+    transition: 0.3s;
+  }
+  &:hover img {
+    transform: rotate(0);
+  }
+}
+
+.imgSection{
+  position: relative;
+  margin: 0px;
+  padding: 0px;
+}
+.cardImg{
+  position: absolute;
+  margin: 0px;
+  top: 7px;
+  left: 30px;
+  right: 19px;
+  border-radius: 100px;
+  margin: 0px;
+  padding: 0px;
+  /* border: 1px solid red; */
+}
+
+.contSection{
+  position: relative;
+  margin: 0px;
+  padding: 0px;
+}
+.cardPrice{
+  position: absolute;
+  top: 145px;
+  left: 15px;
+  margin: 0px;
+  padding: 0px;
+  color: black;
+  
+}
+.cardName{
+  position: absolute;
+  top: 170px;
+  left: 15px;
+  margin: 0px;
+  padding: 0px;
+  color: rgb(121, 121, 121);
+  font-family:Arial, Helvetica, sans-serif;
+  
+}
+.cardBox
+{
+  position: absolute;
+  top: 140px;
+  height: 111px;
+  width: 8px;
+  background-color: rgb(247, 228, 63);
+  margin: 0px;
+  padding: 0px;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+  
+}
+.cardDate{
+  position: absolute;
+  top: 232px; 
+  left: 225px;
+  font-size: 12px;
+  color: rgb(111, 111, 112);
+  margin: 0px;
+  padding: 0px;
+}
